Fixed responsive class wrapping

--- a/src/scss/quadrone/actors.scss
+++ b/src/scss/quadrone/actors.scss
@@ -51,6 +51,9 @@
       // TODO: Fix responsive behavior to handle small screens in edit mode.
       .list-content {
         flex: 2;
+        min-width: 0;
+        flex-wrap: wrap;
+        gap: var(--t5e-size-1x);
       }
 
 
@@ -124,8 +127,11 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        flex: 1;
+        justify-content: end;
 
         select {
+          flex: 1;
           margin-right: var(--t5e-size-1x);
         }
       }
